# omerocrate

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: omero-self-hosted-test.yml  omero-test.yml
docs/: api.md  iris.md
src/omerocrate/: __init__.py  cli.py  iris.py  uploader.py  zarr_io.py
test/: conftest.py  test_cli.py  test_segmentation_upload.py  test_upload.py  util.py
test/demo_segmentation/: nuclear_image_segmentation.csv  ro-crate-metadata.json
test/demo_segmentation_with_imageid/: ro-crate-metadata.json  whole-cell_image_segmentation.csv
