[project]
name = "omerocrate"
version = "0.1.0"
description = "Tools for uploading an RO-Crate dataset to Omero"
readme = "README.md"
authors = [
    { name = "Michael Milton", email = "michael.r.milton@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "aiofiles>=24.1.0",
    "eval-type-backport>=0.2.2",
    "httpx>=0.28.1",
    # 64b3069 is first added in omero-py 5.19.7
    # ROI_Converter_NGFF requires omero-py >=5.21.1
    "omero-py>=5.21.1",
    "pydantic>=2.11.3",
    "pyyaml>=6.0.2",
    "rdflib>=7.1.1",
    "typer>=0.15.2",
]

[project.scripts]
omerocrate = "omerocrate.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "gitpython>=3.1.44",
    "mkdocs-same-dir>=0.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.7",
    "mkdocstrings[python]>=0.28.3",
    "pytest>=8.3.5",
    "mkdocs-typer>=0.0.3",
    "pytest-asyncio>=0.26.0"
]


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
